# Kite

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
src/: main.cpp
src/browser/: app_settings.cpp  app_settings.h  browser_tab.cpp  browser_tab.h  browser_window.cpp  browser_window.h  settings_dialog.cpp  settings_dialog.h
